--- a/quiz_javascript/js_quiz2/quiz4.html
+++ b/quiz_javascript/js_quiz2/quiz4.html
@@ -84,16 +84,40 @@
     </p>
 
     <script>
-      function whatDay() {
+      function whatDay(day) {
         // TODO: 조건을 만족하는 whatDay 함수를 완성해주세요.
+        if (day === 1) {
+          return "월";
+        }
+        else if (day === 2) {
+          return "화";
+        }
+        else if (day === 3) {
+          return "수";
+        }
+        else if (day === 4) {
+          return "목";
+        }
+        else if (day === 5) {
+          return "금";
+        }
+        else if (day === 6) {
+          return "토";
+        }
+        else if (day === 7) {
+          return "일";
+        }
+        else {
+          return null;
+        }
       }
 
       // TODO: 해당 html 파일을 실행한 브라우저 콘솔창에서 whatDay 함수를 호출해주세요!
-      // whatDay(3);
-      // whatDay(7);
-      // whatDay(0);
-      // whatDay(10);
-      // whatDay('5');
+      console.log(whatDay(3));
+      console.log(whatDay(7));
+      console.log(whatDay(0));
+      console.log(whatDay(10));
+      console.log(whatDay('5'));
     </script>
   </body>
 </html>
