--- a/quiz_javascript/js_quiz2/quiz6.html
+++ b/quiz_javascript/js_quiz2/quiz6.html
@@ -55,14 +55,15 @@
     </p>
 
     <script>
-      function firstLetterBig() {
+      function firstLetterBig(str) {
         // TODO: 조건을 만족하는 firstLetterBig 함수를 완성해주세요.
+        console.log(str[0].toUpperCase() + str.slice(1, str.length));
       }
 
       // TODO: 해당 html 파일을 실행한 브라우저 콘솔창에서 firstLetterBig 함수를 호출해주세요!
-      // firstLetterBig('happy');
-      // firstLetterBig('lucky');
-      // firstLetterBig('hi there!');
+      firstLetterBig('happy');
+      firstLetterBig('lucky');
+      firstLetterBig('hi there!');
     </script>
   </body>
 </html>
