--- a/quiz_javascript/js_quiz3/quiz3.html
+++ b/quiz_javascript/js_quiz3/quiz3.html
@@ -82,31 +82,31 @@
     <script>
       function whatDay(day) {
         // TODO: if 조건문으로 작성한 코드를 switch-case 문으로 변경해주세요.
-        if (day === 1) {
-          return '월';
-        } else if (day === 2) {
-          return '화';
-        } else if (day === 3) {
-          return '수';
-        } else if (day === 4) {
-          return '목';
-        } else if (day === 5) {
-          return '금';
-        } else if (day === 6) {
-          return '토';
-        } else if (day === 7) {
-          return '일';
-        } else {
-          return null;
+        switch (day) {
+          case 1:
+            return '월';
+          case 2:
+            return '화';
+          case 3:
+            return '수';
+          case 4:
+            return '목';
+          case 5:
+            return '금';
+          case 6:
+            return '토';
+          case 7:
+            return '일';
+          default:
+            return null;
         }
       }
-
       // TODO: 해당 html 파일을 실행한 브라우저 콘솔창에서 whatDay 함수를 호출해주세요!
-      // whatDay(3);
-      // whatDay(7);
-      // whatDay(0);
-      // whatDay(10);
-      // whatDay('5');
+      console.log(whatDay(3));
+      console.log(whatDay(7));
+      console.log(whatDay(0));
+      console.log(whatDay(10));
+      console.log(whatDay('5'));
     </script>
   </body>
 </html>
