0530 home: update quiz_javascript_sol

--- a/quiz_javascript/js_quiz3/quiz5.html
+++ b/quiz_javascript/js_quiz3/quiz5.html
@@ -90,41 +90,57 @@
     <br />
 
     <script>
-      function drawStars() {
+      function drawStars(lines) {
         // TODO: drawStars() 함수 내부 코드를 채워주세요.
+        for(var i = 0; i < lines; i++) {
+          console.log('*'.repeat(lines-i));
+        }
       }
 
-      function drawStars2() {
+      function drawStars2(lines) {
         // TODO: drawStars2() 함수 내부 코드를 채워주세요.
+        for(var i = 0; i< lines; i++) {
+          console.log('*'.repeat(i+1));
+        }
       }
 
-      function drawStars3() {
+      function drawStars3(lines) {
         // TODO: drawStars3() 함수 내부 코드를 채워주세요.
+        for(var i = 0; i < lines; i++) {
+          console.log(' '.repeat(lines-i-1) + '*'.repeat(i) + ' '.repeat(lines-i-1));
+        }
       }
 
-      function drawStars4() {
+      function drawStars4(lines) {
         // TODO: drawStars4() 함수 내부 코드를 채워주세요.
+        drawStars(lines);
+        for(var i = 0; i < lines-1; i++) {
+          console.log(' '.repeat(i+1) + '*'.repeat(2*lines-1) + ' '.repeat(i+1));
+        }
       }
 
-      function drawStars5() {
+      function drawStars5(lines) {
         // TODO: drawStars5() 함수 내부 코드를 채워주세요.
+        for(var i = 0; i < lines; i++) {
+          console.log(' '.repeat(lines-i-1) + '*'.repeat(lines) + ' '.repeat(i));
+        }
       }
 
       // TODO: 해당 html 파일을 실행한 브라우저 콘솔창에서 drawStars ~ drawStars5 함수를 호출해주세요!
-      // drawStars(3);
-      // drawStars(5);
+      drawStars(3);
+      drawStars(5);
 
-      // drawStars2(3);
-      // drawStars2(5);
+      drawStars2(3);
+      drawStars2(5);
 
-      // drawStars3(3);
-      // drawStars3(5);
+      drawStars3(3);
+      drawStars3(5);
 
-      // drawStars4(3);
-      // drawStars4(5);
+      drawStars4(3);
+      drawStars4(5);
 
-      // drawStars5(3);
-      // drawStars5(5);
+      drawStars5(3);
+      drawStars5(5);
     </script>
   </body>
 </html>
