--- a/quiz_javascript/js_quiz3/quiz4.html
+++ b/quiz_javascript/js_quiz3/quiz4.html
@@ -56,9 +56,16 @@
 
     <script>
       // TODO: 이 문제는 함수를 따로 만드실 필요는 없습니다. 이 곳에 코드를 작성해주세요!
-
+      let i = 0, sum = 0;
+      let n = 99;
+      while(i <= n) {
+        if(i%2 == 0 || i%3 == 0) {
+          sum += i;
+        }
+        i++;
+      }
       // TODO: 해당 html 파일을 실행한 한 후, 브라우저에서 합이 잘 출력되는지 확인해주세요!
-      // console.log(`1과 99까지 중에서 2 또는 3의 배수의 합: ${sum}`);
+      console.log(`1과 99까지 중에서 2 또는 3의 배수의 합: ${sum}`);
     </script>
   </body>
 </html>
