--- a/quiz_javascript/js_quiz4/quiz1.html
+++ b/quiz_javascript/js_quiz4/quiz1.html
@@ -141,8 +141,8 @@
     </h2>
     <ol>
       <li><code>querySelector()</code></li>
-      <li><code>querySelectorsAll()</code></li>
-      <li><code>getElementsById()</code></li>
+      <li class="check"><code>querySelectorsAll()</code></li>
+      <li class="check"><code>getElementsById()</code></li>
       <li><code>getElementsByClassName()</code></li>
       <li><code>getElementsByTagName()</code></li>
     </ol>
