--- a/quiz_javascript/js_quiz4/quiz3.html
+++ b/quiz_javascript/js_quiz4/quiz3.html
@@ -55,6 +55,21 @@
 
     <script>
       // TODO: 문제 조건을 만족하는 js 코드 작성
+      const fruits = ['coffee','blueberry','apple','pasta']
+
+      // coffe 제거
+      fruits.shift()
+
+      // pasta 제거
+      fruits.pop()
+
+      // pineapple 맨 마지막 원소로 추가
+      fruits.push('pineapple')
+
+      // orange 맨 첫번째 원소로 추가
+      fruits.unshift('orange')
+
+      console.log(fruits)
     </script> 
   </body>
 </html>
