--- a/quiz_javascript/js_quiz4/quiz4.html
+++ b/quiz_javascript/js_quiz4/quiz4.html
@@ -53,7 +53,23 @@
     </ul>
 
     <script>
-        // TODO: 문제 조건을 만족하는 js 코드 작성
+        let fastCharger = {
+          id : 21,
+          name : "초고속충전기",
+          seller : 'Jane',
+          isStock : true,
+          colors : ['black', 'white', 'skyblue', 'yellow'],
+          order : Math.floor(Math.random()*90)+10
+        }
+
+        console.log(`
+        === 상품 소개 ===  
+        고유 번호 : ${fastCharger.id}
+        상품명 : ${fastCharger.name}
+        판매자 : ${fastCharger.seller}
+        색상 : ${fastCharger.colors[Math.floor(Math.random()*4)]}
+        주문량 : ${fastCharger.order}
+        `)
     </script> 
   </body>
 </html>
