--- a/quiz_javascript/js_quiz4/quiz5.html
+++ b/quiz_javascript/js_quiz4/quiz5.html
@@ -50,7 +50,26 @@
     </ul>
 
     <script>
-      // TODO: 문제 조건을 만족하는 js 코드 작성
+      const alphabets = [
+        [
+          ['a','b','c','d'],
+          ['e','f','g','h'],
+          ['i','j','k','l'],
+          ['m','n','o','p'],
+        ],
+        [
+          ['q','r','s','t'],
+          ['u','v','w','x'],
+          ['y','z','D','H'],
+          ['L','O','W',' '],
+        ],
+      ];
+
+      const helloWorld = alphabets[1][2][3]+alphabets[0][1][0]+alphabets[1][3][0]+alphabets[0][2][3]+alphabets[0][3][2]+alphabets[1][3][3]+alphabets[1][3][2]+alphabets[0][3][2]+alphabets[1][0][1]+alphabets[1][3][0]+alphabets[1][2][2];
+      const myName = alphabets[1][0][3]+alphabets[0][0][0]+alphabets[1][2][0];
+
+      console.log(helloWorld);
+      console.log(myName);
     </script>
   </body>
 </html>
